[gd_scene load_steps=17 format=3 uid="uid://chcuss0cx3wdk"]

[ext_resource type="Script" path="res://main.gd" id="1_b7tvu"]
[ext_resource type="Texture2D" uid="uid://dx4lkn4kaisja" path="res://IMG_3073.PNG" id="2_mta0a"]
[ext_resource type="Texture2D" uid="uid://i1ekdtnbishu" path="res://Journalling_Animation2.png" id="3_5g2cc"]
[ext_resource type="Texture2D" uid="uid://1q2yvfftm8ja" path="res://Journalling_Animation1(1).png" id="3_lhx8l"]
[ext_resource type="Texture2D" uid="uid://7ta1sigkpfhc" path="res://JournalSection.png" id="4_mlhq5"]
[ext_resource type="Texture2D" uid="uid://ch0vqsrl0y6kg" path="res://Journalling_Animation3.png" id="5_iyau0"]
[ext_resource type="Texture2D" uid="uid://bw7chktw5ymq1" path="res://JournalBox.png" id="5_r4ll4"]
[ext_resource type="FontFile" uid="uid://bwjixo554p8ou" path="res://Semi-Casual.ttf" id="6_6sm10"]
[ext_resource type="Texture2D" uid="uid://cjn1vvhi4fyyx" path="res://Start Fishin Button.png" id="6_117hh"]
[ext_resource type="Texture2D" uid="uid://bare6g8sn2s02" path="res://Return Button.png" id="7_nhfe7"]
[ext_resource type="Script" path="res://TextureButton.gd" id="7_wkmks"]
[ext_resource type="Texture2D" uid="uid://bduhaslus4x7r" path="res://Reel In Button.png" id="10_ay4ok"]

[sub_resource type="Animation" id="Animation_fekkg"]
resource_name = "fisher_reel_animation"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JournallingAnimation1(1):texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 1.8, 2.4, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_lhx8l"), ExtResource("3_5g2cc"), ExtResource("5_iyau0"), ExtResource("3_5g2cc"), ExtResource("5_iyau0")]
}

[sub_resource type="Animation" id="Animation_gr3pd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JournallingAnimation1(1):texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_5g2cc")]
}

[sub_resource type="Animation" id="Animation_gse5r"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JournallingAnimation1(1):texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_lhx8l")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fcg11"]
_data = {
"RESET": SubResource("Animation_gr3pd"),
"fisher_reel_animation": SubResource("Animation_fekkg"),
"idle": SubResource("Animation_gse5r")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_b7tvu")

[node name="Background" type="Node2D" parent="."]

[node name="BackgroundSprite" type="Sprite2D" parent="Background"]
position = Vector2(253.845, 232.5)
scale = Vector2(0.469819, 0.469819)
texture = ExtResource("2_mta0a")

[node name="Fisher" type="Node2D" parent="."]

[node name="JournallingAnimation1(1)" type="Sprite2D" parent="Fisher"]
position = Vector2(240.078, 183)
scale = Vector2(0.448692, 0.448692)
texture = ExtResource("3_5g2cc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fisher"]
libraries = {
"": SubResource("AnimationLibrary_fcg11")
}

[node name="JournalSection" type="Sprite2D" parent="."]
position = Vector2(251, 687)
scale = Vector2(0.480324, 0.480324)
texture = ExtResource("4_mlhq5")

[node name="JournalBox" type="Sprite2D" parent="."]
visible = false
position = Vector2(250.656, 605)
scale = Vector2(0.519796, 0.351485)
texture = ExtResource("5_r4ll4")

[node name="TextEdit" type="TextEdit" parent="JournalBox"]
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.048
anchor_right = 0.961
anchor_bottom = 0.969
offset_left = -462.928
offset_top = -601.176
offset_right = -472.184
offset_bottom = -609.428
size_flags_vertical = 4
theme_override_colors/background_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("6_6sm10")
theme_override_font_sizes/font_size = 50
wrap_mode = 1
scroll_smooth = true

[node name="ReturnHome" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 353.0
offset_top = 366.0
offset_right = 525.0
offset_bottom = 421.0
texture_normal = ExtResource("7_nhfe7")
ignore_texture_size = true
stretch_mode = 0

[node name="FishingButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 404.0
offset_right = 373.0
offset_bottom = 510.0
texture_normal = ExtResource("6_117hh")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("7_wkmks")

[node name="ReelInButton" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 160.0
offset_top = 825.0
offset_right = 344.0
offset_bottom = 894.0
texture_normal = ExtResource("10_ay4ok")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="ReturnHome" to="." method="_on_return_home_pressed"]
[connection signal="pressed" from="FishingButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="ReelInButton" to="." method="_on_reel_in_button_pressed"]
